<resources>
    <string name="app_name">PocketBudget</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="test_title">Test Title</string>
    <string name="title_income_fragment">Add Income</string>
    <string name="title_bill_fragment">Add Bill</string>
    <string name="title_expense_fragment">Add Expense</string>
    <string name="title_view_budget">View Your Budget</string>
    <string name="hint_money">$000.00</string>
    <string name="hint_name_bill">i.e. Rent</string>
    <string name="hint_name_expense">i.e. Gas</string>
    <string name="hint_income">i.e. Salary</string>
    <string name="hint_test">i.e. This is a Test</string>
    <string name="hint_date">00/00/0000</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="alert_quit">Are you sure you want to stop this impute?</string>
    <string name="title_remove_from_budget">Remove Item </string>
    <string name="source_string">Source:</string>
    <string name="amount_string">Amount:</string>
    <string name="date_string">Date:</string>
    <string name="add_multiple_string">Add Multiple?</string>
</resources>
